syntax = "proto3";

package tensorflow.serv ng;
opt on cc_enable_arenas = true;

 mport "tensorflow_serv ng/ap s/class f cat on.proto";
 mport "tensorflow_serv ng/ap s/get_model_ tadata.proto";
 mport "tensorflow_serv ng/ap s/ nference.proto";
 mport "tensorflow_serv ng/ap s/pred ct.proto";
 mport "tensorflow_serv ng/ap s/regress on.proto";

// open s ce marker; do not remove
// Pred ct onServ ce prov des access to mach ne-learned models loaded by
// model_servers.
serv ce Pred ct onServ ce {
  // Class fy.
  rpc Class fy(Class f cat onRequest) returns (Class f cat onResponse);

  // Regress.
  rpc Regress(Regress onRequest) returns (Regress onResponse);

  // Pred ct -- prov des access to loaded TensorFlow model.
  rpc Pred ct(Pred ctRequest) returns (Pred ctResponse);

  // Mult  nference AP  for mult - aded models.
  rpc Mult  nference(Mult  nferenceRequest) returns (Mult  nferenceResponse);

  // GetModel tadata - prov des access to  tadata for loaded models.
  rpc GetModel tadata(GetModel tadataRequest)
      returns (GetModel tadataResponse);
}
